# studentVC

./: .env.test  .gitignore  CLAUDE.md  Dockerfile  High Assurance Verifiable Identifiers (HAVID).docx  Makefile  README.md  STEP1_COMPLETED.md  cherbke.jsonl  docker-compose.ci.yml  impl_plan.md  run_test.py  studentVC.jsonl  testplan.md  x509_tasks.md
.cursor/: mcp.json
.cursor/rules/: studentVCdev.mcp
.github/workflows/: ci-cd.yml  test-x509.yml
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
api/: student_data_api.py
backend/: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  README_X509_Flow.md  bandit_report.json  conftest.py  docker-compose.yml  e2e_x509_detailed_simulation.py  e2e_x509_test.py  gunicorn.conf.py  main.py  print_test_credential.py  pytest.ini  requirements-dev.txt  requirements.txt  run_x509_flow_test.sh  run_x509_tests.sh  simple_tenant_test.py  test_docker_tenant.sh  test_tenant_config.py
backend/demo/: authorize.py  cfg.py  credential_offer.py  discover_capabilities.py  (+6 more)
bbs-core/: .gitignore
docs/: keycloak_integration.md  x509_integration.md
examples/: README_X509_INTEGRATION.md  e2e_x509_detailed_simulation.py  multi_issuer_x509_simulation.py  shibboleth_integration_demo.py
ios/: .gitignore  .gitmodules  README.md  projectBundle.xcconfig
scripts/: performance-audit.sh  quick-test.sh  setup-backend.sh  setup-ci-cd.sh  test-ci-cd-local.sh
temp_build/bbs-core/: Cargo.toml  README.md
temp_build/bbs-core/python/: main.py
temp_build/bbs-core/src/: lib.udl
(+200 files in other folders)
